# Engineering_robot_vision

./: .gitignore  CMakeLists.txt  Exchange_slot_detector.cpp  GetCameraImage.cpp  GetCameraImage.hpp  detector.hpp  main.cpp  pnpsolver.cpp  readme.md
cameraOpen/include/: MvCameraControl.h
